# wio-terminal-rust-nes-emulator

./: .gitignore  Dockerfile
arduino_app/: arduino_app.ino
embedded/: Cargo.toml  build-arduino-lib.sh  build.rs  rust_nes_emulator_embedded.h  wrapper.h
embedded/.cargo/: config
embedded/mbed/: Makefile  main.cpp  rust_nes_emulator_embedded.lib
embedded/rust_nes_emulator_embedded/: library.properties
embedded/rust_nes_emulator_embedded/src/: rust_nes_emulator_embedded.h
embedded/src/: embedded_emulator.rs  lib.rs  main.rs
src/: ppu.rs
wio_terminal/: build.sh  wio_terminal.ino
wio_terminal/.cargo/: config
wio_terminal/rust_nes_emulator_for_arduino_lib/: library.properties
wio_terminal/src/: lib.rs
