[package]
name = "rust-nes-emulator-embedded"
version = "0.1.0"
authors = ["K <kamiyaowl@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "rust_nes_emulator_embedded"
crate-type = ["staticlib"]

[dependencies.rust-nes-emulator]
path = "../"

[build-dependencies]
cbindgen = "0.9.1"

[dependencies]


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
